# AutoValetParking

./: .gitignore  LICENSE.txt  README.md  requirements.txt
animation/: .swp  animation.py  helper.py  simulation.py  video_generation.py
component/: parking_lot.py  pedestrian.py
components/: boxcomponent.py  car.py  customer.py  game.py  map.py  pedestrian.py  planner.py  simulation.py  supervisor.py  tow_truck.py
gazebo/: CMakeLists.txt  package.xml
gazebo/launch/: main.launch  obstacle.launch  one_robot.launch  pedestrian.launch  robot.launch  robots.launch  spawn_models.launch  spawn_pedestrians.launch  spawn_sdf.launch  world.launch
gazebo/src/: GazeboCtrl.py  ModelCtrl.py  Publisher.py  RobotCtrl.py  communication.py  gazebo_launcher.py  movepedestrian0.cc  movepedestrian1.cc  movepedestrian2.cc  movepedestrian3.cc  movepedestrian4.cc  robot_commander.py  robot_communication.py  test_publisher.py  test_robot_ctrl.py  test_robot_n_model_ctrl.py  test_robot_trajectory_ctrl.py
gazebo/worlds/: empty_world  parking_lot_world  world_w_ground_plane
gazebo/worlds/obstacle/: model.sdf
gazebo/worlds/parking_lot_ground_plane/: model.config  model.sdf
gazebo/worlds/parking_lot_ground_plane/materials/scripts/: byu.material
gazebo/worlds/pedestrian/: model.config  model.sdf
gazebo/worlds/pedestrian0/: model.config  model.sdf
gazebo/worlds/pedestrian1/: model.sdf
gazebo/worlds/pedestrian2/: model.config  model.sdf
gazebo/worlds/pedestrian3/: model.sdf
gazebo/worlds/pedestrian4/: model.sdf
gazebo/worlds/walls/: model.config  model.sdf
(+128 files in other folders)
